--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -95,6 +96,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "eslint": "^4.10.0",
+    "eslint-config-defaults": "^9.0.0",
     "redux-logger": "^3.0.6"
   }
 }
